--- a/books.html
+++ b/books.html
@@ -27,7 +27,7 @@
     <!-- Book Carousel -->
     <section id="book-carousel">
         <a id="book-link" href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html?q=&page=1&pageSize=4" target="_blank">
-            <img id="book-cover" src="assets/images/book1.jpg" alt="Book Cover">
+            <img id="book-cover" src="assets/images/Book1.png" alt="Book Cover">
         </a>
         <p id="book-title">Memoirs of a Vampyr's Daughter: Eden</p>
     </section>
@@ -52,7 +52,7 @@
             Will she find her secrets in time? Or will the denizens of the Night World find her first?
         </strong></p>
         
-        <a href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html?q=&page=1&pageSize=4" class="buy-button" target="_blank">BUY NOW</a>
+        <a href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html?q=&page=1&pageSize=4" class="book-cover" id="book-cover" class="buy-button" target="_blank">BUY NOW</a>
     </section>
 
     <!-- Book 2 Description -->
@@ -76,7 +76,7 @@
             A battle between good and evil ensues, with Sophie in the middle.
         </strong></p>
     
-        <a href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-wisdom/paperback/product-wmkzv2.html?srsltid=AfmBOoqc89szRF0NN4mQDt-cXOVDgCn0XVw6IPs5HDWp6zTL-3wjK4Yj&page=1&pageSize=4" class="buy-button" target="_blank">BUY NOW</a>
+        <a href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-wisdom/paperback/product-wmkzv2.html?srsltid=AfmBOoqc89szRF0NN4mQDt-cXOVDgCn0XVw6IPs5HDWp6zTL-3wjK4Yj&page=1&pageSize=4" class="book-cover" id="book-cover" class="buy-button" target="_blank">BUY NOW</a>
     </section>
 
     <footer>
