added vampire images

--- a/characters.html
+++ b/characters.html
@@ -849,60 +849,114 @@
             <h2>Main Protagonist</h2>
         </div>
   
-      <!-- Sophie's Main Character Card (Book 2 Duplicate) -->
-      <div class="character-card book2" onclick="openCharacterOverlay('sophie2-overlay')">
-        <img src="assets/images/characters/Sophie/Sophie.webp" alt="Sophie Munday">
-        <h3>Sophie Munday</h3>
-        <p class="short-description">
-          A transformed young woman, embracing newfound power and burdened with the weight of destiny.
-        </p>
-      </div>
-  
-      <!-- Sophie’s Full Bio Overlay for Book 2 (Updated) -->
-      <div class="character-overlay" id="sophie2-overlay">
-        <div class="overlay-content">
-          <button class="close-overlay" onclick="closeCharacterOverlay('sophie2-overlay')">&times;</button>
-          <div class="overlay-header">
+      <!-- Sophie's Main Character Card (Book 2) -->
+<div class="character-card book2" onclick="openCharacterOverlay('sophie2-overlay')">
+    <img src="assets/images/characters/Sophie/Sophie.webp" alt="Sophie Munday">
+    <h3>Sophie Munday</h3>
+    <p class="short-description">Once a frightened girl in the dark, now a force neither human nor Vampyr can ignore—Sophie is rising, but at what cost?</p>
+</div>
+
+<!-- Sophie’s Full Bio Overlay for Book 2 (Updated) -->
+<div class="character-overlay" id="sophie2-overlay">
+    <div class="overlay-content">
+        <button class="close-overlay" onclick="closeCharacterOverlay('sophie2-overlay')">&times;</button>
+        <div class="overlay-header">
             <h2>Sophie Munday</h2>
-          </div>
-          <div class="overlay-intro">
+        </div>
+        <div class="overlay-intro">
             <img src="assets/images/characters/Sophie/Sophie.webp" alt="Sophie">
             <ul class="character-traits">
-              <li><span class="trait">Empowered</span></li>
-              <li><span class="trait">Insightful</span></li>
-              <li><span class="trait">Determined</span></li>
-              <li><span class="trait">Resilient</span></li>
-              <li><span class="trait">Awakened</span></li>
+                <li><span class="trait">Empowered</span></li>
+                <li><span class="trait">Insightful</span></li>
+                <li><span class="trait">Determined</span></li>
+                <li><span class="trait">Resilient</span></li>
+                <li><span class="trait">Awakened</span></li>
             </ul>
-          </div>
-          <!-- Expandable Sections for Book 2 Sophie -->
-          <div class="expandable-sections">
-            <div class="expandable-sections-container">
-              <details>
-                <summary><strong>New Insights</strong></summary>
-                <p>
-                  In Book Two, Sophie begins to unlock hidden truths about her abilities and lineage.
-                  The mysterious forces of the Night World push her to confront secrets that redefine her identity.
-                </p>
-              </details>
-              <details>
-                <summary><strong>Growth & Transformation</strong></summary>
-                <p>
-                  No longer the uncertain girl of her past, Sophie emerges as a determined force ready to face the supernatural.
-                  Her nightmares now serve as catalysts for personal growth, fueling her resolve to embrace her destiny.
-                </p>
-              </details>
-              <details>
-                <summary><strong>Emerging Destiny</strong></summary>
-                <p>
-                  As the stakes rise, Sophie’s role in an ancient prophecy becomes clearer.
-                  The challenges she faces force her to question everything—including who she once was—and pave the way for a future where she might be the key to reshaping the Night World.
-                </p>
-              </details>
-            </div>
-          </div>
         </div>
-      </div>
+        <!-- Expandable Sections for Book 2 Sophie -->
+        <div class="expandable-sections">
+            <div class="expandable-sections-container">
+                <details>
+                    <summary><strong>New Insights</strong></summary>
+                    <p>
+                        In Book Two, Sophie begins to unlock hidden truths about her abilities and lineage.
+                        The mysterious forces of the Night World push her to confront secrets that redefine her identity.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>Growth & Transformation</strong></summary>
+                    <p>
+                        No longer the uncertain girl of her past, Sophie emerges as a determined force ready to face the supernatural.
+                        Her nightmares now serve as catalysts for personal growth, fueling her resolve to embrace her destiny.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>Her Abilities & Strengths</strong></summary>
+                    <p>
+                        Sophie's abilities are no longer just strange occurrences—she is beginning to understand them and use them to her advantage.
+                    </p>
+                    <ul>
+                        <li><span class="emphasis">Refined Prophetic Visions:</span> She no longer sees her dreams as just nightmares. Instead, they reveal deeper truths and guide her actions.</li>
+                        <li><span class="emphasis">Heightened Reflexes & Combat Instincts:</span> When faced with danger, Sophie moves with precision, sometimes before she even realizes what she is doing.</li>
+                        <li><span class="emphasis">Mental Resilience:</span> She is no longer easily manipulated, resisting both mental and supernatural influence.</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary><strong>Her Role in the Prophecy</strong></summary>
+                    <p>
+                        As the stakes rise, Sophie’s role in an ancient prophecy becomes clearer.
+                        The challenges she faces force her to question everything—including who she once was—and pave the way for a future where she might be the key to reshaping the Night World.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>Key Relationships</strong></summary>
+                    <h4>Jean Munday (Mother)</h4>
+                    <p>
+                        The bond between mother and daughter is strained but evolving. Jean’s lies hurt Sophie deeply, but she now sees them for what they were—acts of fear rather than malice.
+                    </p>
+                    <h4>Eden (Father)</h4>
+                    <p>
+                        Their relationship is more complicated than ever. Sophie is no longer just Eden’s daughter—she is a force of her own, and she is demanding answers he is reluctant to give.
+                    </p>
+                    <h4>Blaine (Unsettling Connection)</h4>
+                    <p>
+                        Their dynamic is ever-changing. There is something unspoken between them, an understanding that goes beyond words. Whether it is trust, attraction, or rivalry remains to be seen.
+                    </p>
+                </details>
+            </div>
+            <!-- Spoiler Heading -->
+            <h2 class="spoiler-heading">⚠ Spoilers</h2>
+            <!-- Spoiler Sections -->
+            <div class="spoiler-sections">
+                <details>
+                    <summary><strong>Sophie’s Darkest Revelation</strong></summary>
+                    <p>
+                        Sophie discovers that her connection to the prophecy is deeper than anyone realized. She is not just a key to the Night World’s downfall—she may be its salvation or its destruction.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>Her Connection to The Master</strong></summary>
+                    <p>
+                        Sophie learns that The Master has been watching her since birth, shaping events from the shadows. His interest in her is not merely about power—he sees her as something more.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>A Betrayal That Changes Everything</strong></summary>
+                    <p>
+                        Someone Sophie trusted turns against her, forcing her to question everything she believed about loyalty and fate. This betrayal alters the course of her journey, leaving her to stand alone in ways she never imagined.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>The Choice That Defines Her Future</strong></summary>
+                    <p>
+                        By the end of Book 2, Sophie is faced with an impossible decision—one that could reshape the balance of power in the Night World forever. Her choice will set the stage for the final battle ahead.
+                    </p>
+                </details>
+            </div>
+        </div>
+    </div>
+</div>
+
 
   
       <div class="section-title">
@@ -914,7 +968,7 @@
                 <img src="assets/images/characters/Eden/Eden.webp" alt="Eden">
                 <h3>Eden</h3>
                 <p class="short-description">
-                  A haunted guardian burdened by regret, battling fate and fighting for redemption in a world on the brink.
+                    No longer just a shadow in the dark, Eden is a warrior fighting against fate itself—desperate to atone, yet unsure if redemption is even possible.
                 </p>
               </div>
           
@@ -985,7 +1039,7 @@
     <img src="assets/images/characters/Blaine/Blaine.webp" alt="Blaine">
     <h3>Blaine</h3>
     <p class="short-description">
-      A Vampyr torn between the past and his future, fighting to escape Faye’s grasp and forge his own path.
+        No longer just a pawn in Faye’s game, Blaine has severed his chains—but escaping the past is never that simple.
     </p>
   </div>
   
@@ -1078,10 +1132,11 @@
   
       <!-- Aeryn's Main Character Card (Book 2) -->
       <div class="character-card book2" onclick="openCharacterOverlay('aeryn2-overlay')">
-        <img src="assets/images/characters/Aeryn/Aeryn.jpg" alt="Aeryn">
+        <img id="aeryn-image" src="assets/images/characters/Aeryn/Aeryn.png" alt="Aeryn">
+
         <h3>Aeryn</h3>
         <p class="short-description">
-          A fierce survivor, trapped between loyalty and her own past.
+            A fierce survivor, once bound by loyalty and haunted by her past, now forced to forge her own path in a world that seeks to break her.
         </p>
       </div>
   
@@ -1279,7 +1334,7 @@
     <img src="assets/images/characters/TheMaster/TheMaster.webp" alt="The Master">
     <h3>The Master</h3>
     <p class="short-description">
-        A tyrant of the Night World, his grip on power is slipping, but his thirst for control is unrelenting.
+        A tyrant of the Night World, his once-unshakable rule now teeters on the edge of ruin. Yet, his thirst for control remains as insatiable as his hunger for blood.
     </p>
 </div>
 
@@ -1361,9 +1416,10 @@
       <div class="character-card book2" onclick="openCharacterOverlay('faye-overlay')">
         <img id="faye-image" src="assets/images/characters/Faye/Faye.webp" alt="Faye">
 
+
         <h3>Faye</h3>
         <p class="short-description">
-          The seductive and deadly queen of her own Vampyr empire.
+            A deadly ruler trapped in a child’s body, Faye wields power with chilling authority and cruel delight.
         </p>
       </div>
         
