--- a/books.html
+++ b/books.html
@@ -34,7 +34,21 @@
     <section class="book-container">
         <h3 class="book-subtitle">Book 1</h3>
         <h2 class="book-title">Memoirs of a Vampyr's Daughter: Eden</h2>
-        <p class="book-description">Sophie, diagnosed with night terrors, soon discovers they are the least of her problems...</p>
+        <p class="book-description">
+            A young adult fiction book, following the story of Sophie, a girl diagnosed with night terrors. But before long, 
+            she will realize the night terrors are the least of her problems.
+        </p>
+        <p class="book-description">
+            Her sixteenth birthday looms, and she finds herself in a life-or-death race against time to uncover the real secret 
+            to her parentage and the prophecy that says she will end the Night World.
+        </p>
+        <p class="book-description">
+            Fraught with creatures she never imagined existed, she tries to find her way to the answers, meeting Witches, 
+            Werewolves, and Vampyrs along the way.
+        </p>
+        <p class="book-description"><strong>
+            Will she find her secrets in time? Or will the denizens of the Night World find her first?
+        </strong></p>
         <a href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html" class="buy-button" target="_blank" aria-label="Buy Memoirs of a Vampyr's Daughter: Eden">BUY NOW</a>
     </section>
 
@@ -42,7 +56,22 @@
     <section class="book-container">
         <h3 class="book-subtitle">Book 2</h3>
         <h2 class="book-title">Memoirs of a Vampyr's Daughter: Wisdom</h2>
-        <p class="book-description">Sophie must uncover the prophecy before she turns sixteen, but the Night World is closing in...</p>
+        <p class="book-description">
+            Book Two in the Memoirs series, following the story of Sophie Munday, a teenage girl who is thrown into a terrifying 
+            world of Vampyrs, Werewolves, Magick, and a dreaded prophecy.
+        </p>
+        <p class="book-description">
+            A mad scramble begins to get to the prophecy, and its contents, before Sophie turns sixteen.
+        </p>
+        <p class="book-description">
+            Is she the one named as the downfall of the Night World?
+        </p>
+        <p class="book-description">
+            Can the prophecy be found before it's too late?
+        </p>
+        <p class="book-description"><strong>
+            A battle between good and evil ensues, with Sophie in the middle.
+        </strong></p>
         <a href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-wisdom/paperback/product-wmkzv2.html" class="buy-button" target="_blank" aria-label="Buy Memoirs of a Vampyr's Daughter: Wisdom">BUY NOW</a>
     </section>
 
