--- a/characters.html
+++ b/characters.html
@@ -1383,6 +1383,80 @@
                     </p>
                 </details>
                 <details>
+<!-- Aeryn's Character Card (Book 2) -->
+<div class="character-card book2" onclick="openCharacterOverlay('aeryn2-overlay')">
+    <img src="assets/images/characters/Aeryn/Aeryn.jpg" alt="Aeryn">
+    <h3>Aeryn</h3>
+    <p class="short-description">
+        A fierce survivor, once bound by loyalty and haunted by her past, now forced to forge her own path in a world that seeks to break her.
+    </p>
+</div>
+
+<!-- Aeryn's Full Bio Overlay for Book 2 -->
+<div class="character-overlay" id="aeryn2-overlay">
+    <div class="overlay-content">
+        <button class="close-overlay" onclick="closeCharacterOverlay('aeryn2-overlay')">&times;</button>
+        <div class="overlay-header">
+            <h2>Aeryn</h2>
+            <h6>Otherwise Known As</h6>
+            <p>Elspeth Mary (formerly)</p>
+        </div>
+
+        <div class="overlay-intro">
+            <img src="assets/images/characters/Aeryn/Aeryn.jpg" alt="Aeryn">
+            <ul class="character-traits">
+                <li><span class="trait">Resilient</span></li>
+                <li><span class="trait">Haunted</span></li>
+                <li><span class="trait">Loyal</span></li>
+                <li><span class="trait">Fiercely Independent</span></li>
+                <li><span class="trait">Secretive</span></li>
+                <li><span class="trait">Emotionally Guarded</span></li>
+            </ul>
+        </div>
+
+        <!-- Expandable Sections for Aeryn -->
+        <div class="expandable-sections">
+            <div class="expandable-sections-container">
+                <details>
+                    <summary><strong>Overview</strong></summary>
+                    <p>
+                        Aeryn is a Vampyr bound by pain, loyalty, and a past she cannot escape. She was turned in 1888 but has never fully given in to the darkness within her.
+                        Though she stands by Eden, she begins to question her place in the war that looms ahead.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>Her Captivity & Torture</strong></summary>
+                    <p>
+                        When <em>Wisdom</em> begins, Aeryn is a prisoner of <strong>The Master</strong>. Subjected to physical and psychological torment, 
+                        she is kept in absolute darkness, where time and reality blur. The Master intends to break her spirit, but Aeryn clings to her will to survive.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>Her Escape & Mischa's Role</strong></summary>
+                    <p>
+                        Aeryn's escape comes through <strong>Mischa</strong>, a mysterious and seemingly unhinged figure with extraordinary Magickal abilities.
+                        Mischa not only releases her from captivity but also protects her from Werewolves as they flee.
+                    </p>
+                </details>
+                <details>
+                    <summary><strong>The High Order & Hailzy the White</strong></summary>
+                    <p>
+                        Seeking refuge, Aeryn finds herself entangled with <strong>Hailzy the White</strong> and the <strong>High Order</strong>, a powerful Witch faction.
+                        Though they offer protection, Aeryn senses ulterior motives. As tensions rise, Hailzy interrogates Sophie and threatens Aeryn with her Magick.
+                    </p>
+                </details>
+            </div>
+
+            <!-- Spoiler Sections for Aeryn -->
+            <h2 class="spoiler-heading">⚠ Spoilers</h2>
+            <div class="spoiler-sections">
+                <details>
+                    <summary><strong>Confronting Her Past</strong></summary>
+                    <p>
+                        Aeryn reveals the truth about her past—Eden turned her after murdering her parents. Though she once resented him, she realizes he has changed, especially due to his love for Sophie.
+                    </p>
+                </details>
+                <details>
                     <summary><strong>A Growing Threat</strong></summary>
                     <p>
                         Aeryn discovers Faye’s corpse, realizing that a power shift is coming.
