--- a/books.html
+++ b/books.html
@@ -110,7 +110,7 @@
     <button id="open-chatbot">Chat with Me</button>
 
     <!-- Scripts -->
-    <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/script.js" defer></script>
     <script src="assets/js/chatbot.js"></script>
 </body>
 </html>
