--- a/characters.html
+++ b/characters.html
@@ -1835,7 +1835,7 @@
 
         <!-- Hailzy the White Character Card (Book 2 Update) -->
         <div class="character-card book2" onclick="openCharacterOverlay('hailzy2-overlay')">
-            <img src="assets/images/characters/Hailzy/Hailzy.webp" alt="Hailzy the White">
+            <img id="hailzy-image" src="assets/images/characters/Hailzy/Hailzy.webp" alt="Hailzy the White">
             <h3>Hailzy the White</h3>
             <p class="short-description">
                 The enigmatic and formidable leader of the High Order of Witches, wielding a power so immense that even the Night World trembles before her.
@@ -1850,7 +1850,7 @@
                     <h2>Hailzy the White</h2>
                 </div>
                 <div class="overlay-intro">
-                    <img src="assets/images/characters/Hailzy/Hailzy.webp" alt="Hailzy the White">
+                    <img src="assets/images/characters/Hailzy/Hailzy.png" alt="Hailzy the White">
                     <ul class="character-traits">
                         <li><span class="trait">Leader of the High Order</span></li>
                         <li><span class="trait">Master of Elemental & Sonic Magick</span></li>
