--- a/books.html
+++ b/books.html
@@ -24,13 +24,17 @@
 
     <!-- Book Carousel -->
     <section id="book-carousel">
-        <a class="book-link" href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html" target="_blank">
-            <img class="book-cover" src="assets/images/Book1.png" alt="Memoirs of a Vampyr's Daughter: Eden">
+        <div id="book-container">
+            <img id="book-cover" class="book-cover" src="assets/images/Book1.png" alt="Memoirs of a Vampyr's Daughter: Eden">
+            <br><br>
+            <p id="book-title" class="book-title">Memoirs of a Vampyr's Daughter: Eden</p>
+        </div>
+        <br>
+        <a id="book-link" class="book-link" href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html" target="_blank">
+            Buy Now
         </a>
-        <br>
-        <br>
-        <p class="book-title">Memoirs of a Vampyr's Daughter: Eden</p>
     </section>
+
 
     <!-- Book 1 Description -->
     <section class="book-container">
