Added js functionality

--- a/books.html
+++ b/books.html
@@ -24,13 +24,14 @@
 
     <!-- Book Carousel -->
     <section id="book-carousel">
-        <div id="book-container">
-            <img id="book-cover" class="book-cover" src="assets/images/Book1.png" alt="Memoirs of a Vampyr's Daughter: Eden">
-            <br><br>
-            <p id="book-title" class="book-title">Memoirs of a Vampyr's Daughter: Eden</p>
-        </div>
+        <a class="book-link" href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html" target="_blank">
+            <img class="book-cover" src="assets/images/Book1.png" alt="Memoirs of a Vampyr's Daughter: Eden">
+        </a>
         <br>
+        <br>
+        <p class="book-title">Memoirs of a Vampyr's Daughter: Eden</p>
     </section>
+
 
 
     <!-- Book 1 Description -->
