--- a/books.html
+++ b/books.html
@@ -22,15 +22,42 @@
         </nav>
     </header>
 
+
+
     <!-- Book Carousel -->
-    <section id="book-carousel">
-        <a class="book-link" href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html" target="_blank">
-            <img class="book-cover" src="assets/images/Book1.png" alt="Memoirs of a Vampyr's Daughter: Eden">
-        </a>
-        <br>
-        <br>
-        <p class="book-title">Memoirs of a Vampyr's Daughter: Eden</p>
-    </section>
+<section id="book-carousel">
+    <div id="book-container" class="book-container">
+        
+        <!-- Swipe Indicator for Mobile -->
+        <p class="swipe-indicator">Swipe to see the next book →</p>
+
+        <!-- Wrapper for Books (Needed for Swiping) -->
+        <div id="book-wrapper" class="book-wrapper">
+            <!-- Book 1 -->
+            <div class="book-item" id="book1">
+                <a class="book-link" href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-eden/paperback/product-1vg9vgp8.html" target="_blank">
+                    <img class="book-cover" src="assets/images/Book1.png" alt="Memoirs of a Vampyr's Daughter: Eden">
+                </a>
+                <br>
+                <p class="book-title">Memoirs of a Vampyr's Daughter</p>
+                <p class="book-title">Eden</p>
+            </div>
+
+            <!-- Book 2 -->
+            <div class="book-item" id="book2">
+                <a class="book-link" href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-wisdom/paperback/product-wmkzv2.html" target="_blank">
+                    <img class="book-cover" src="assets/images/Book2.png" alt="Memoirs of a Vampyr's Daughter: Wisdom">
+                </a>
+                <br>
+                <p class="book-title">Memoirs of a Vampyr's Daughter</p>
+                    <p class="book-title">Wisdom</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+    
+
 
 
 
