--- a/contact.html
+++ b/contact.html
@@ -51,47 +51,35 @@
 <!-- ================================================ -->
 
 
-<div id="chatbot" style="display: none;"> <!-- Hidden initially -->
-    <button id="minimize-button" onclick="closeChatbot()">×</button>
-
-    <h2>FAQ Chatbot</h2>
-    <p>Hi! How can I assist you today?</p>
-  
-    <!-- Response section -->
-    <div id="response">
-        <p>I couldn't find an answer to your question. Please provide your email, and I'll get back to you shortly!</p>
-        <form id="email-form">
-            <input type="email" placeholder="Your email address" required />
-            <textarea placeholder="Your question" required></textarea>
-            <button type="button">Send</button>
-        </form>
+    <!-- Chatbot Section -->
+    <div id="chatbot" style="display: none;">
+        <button id="minimize-button" onclick="closeChatbot()">×</button>
+        <h2>FAQ Chatbot</h2>
+        <p>Hi! How can I assist you today?</p>
+        <div id="response">
+            <p>I couldn't find an answer to your question. Please provide your email, and I'll get back to you shortly!</p>
+            <form id="email-form">
+                <input type="email" placeholder="Your email address" required />
+                <textarea placeholder="Your question" required></textarea>
+                <button type="button">Send</button>
+            </form>
+        </div>
+        <div id="options">
+            <button onclick="getResponse('About Me')">About Me</button>
+            <button onclick="getResponse('My Books')">My Books</button>
+            <button onclick="getResponse('Where to Buy')">Where to Buy</button>
+            <button onclick="getResponse('Upcoming Projects')">Upcoming Projects</button>
+            <button onclick="getResponse('Writing Process')">Writing Process</button>
+            <button onclick="getResponse('World-Building')">World-Building</button>
+            <button onclick="getResponse('Favourite Authors')">Favourite Authors</button>
+            <button onclick="getResponse('Fun Fact')">Fun Fact</button>
+        </div>
+        <div id="input-container">
+            <input type="text" id="user-input" placeholder="What would you like to know?" />
+            <button id="submit-button" onclick="sendQuestion()">Send</button>
+        </div>
     </div>
-  
-    <!-- Options section -->
-    <!-- Options section -->
-    <div id="options">
-        <button onclick="getResponse('About Me')">About Me</button>
-        <button onclick="getResponse('My Books')">My Books</button>
-        <button onclick="getResponse('Where to Buy')">Where to Buy</button>
-        <button onclick="getResponse('Upcoming Projects')">Upcoming Projects</button>
-        <button onclick="getResponse('Writing Process')">Writing Process</button>
-        <button onclick="getResponse('World-Building')">World-Building</button>
-        <button onclick="getResponse('Favourite Authors')">Favourite Authors</button>
-        <button onclick="getResponse('Other Questions')">Other Questions</button>
-        <button onclick="getResponse('Fun Fact')">Fun Fact</button> <!-- New button -->
-    </div>
-    
-  <br>
-    <!-- Input section -->
-    <div id="input-container">
-      <input type="text" id="user-input" placeholder="What would you like to know?" />
-      <button id="submit-button" onclick="sendQuestion()">Send</button>
-    </div>
-
-
-</div>
-  </div>  
-<button id="open-chatbot">Chat with Me</button>
+    <button id="open-chatbot">Chat with Me</button>
 
 
     <script src="/assets/js/script.js"></script>
