--- a/books.html
+++ b/books.html
@@ -29,7 +29,7 @@
         <div id="book-container" class="book-container">
             
             <!-- Swipe Indicator for Mobile -->
-            <p class="swipe-indicator">Swipe to see the next book →</p>
+            <p class="swipe-indicator">← Swipe to see the next book →</p>
     
             <!-- Wrapper for Books (Needed for Swiping) -->
             <div id="book-wrapper" class="book-wrapper">
