--- a/characters.html
+++ b/characters.html
@@ -2001,7 +2001,7 @@
 
         <!-- Bronwyn Character Card (Book 2 Update) -->
         <div class="character-card book2" onclick="openCharacterOverlay('bronwyn-overlay')">
-            <img src="assets/images/characters/Bronwyn/Bronwyn.webp" alt="Bronwyn" loading="lazy">
+            <img src="assets/images/characters/Bronwyn/Bronwyn.webp" alt="Bronwyn">
             <h3>Bronwyn</h3>
             <p class="short-description">
                 A calculating and formidable member of the High Order of Witches, known for her mastery of mental magick and her cold, strategic nature.
@@ -2016,7 +2016,7 @@
                     <h2>Bronwyn</h2>
                 </div>
                 <div class="overlay-intro">
-                    <img src="assets/images/characters/Bronwyn/Bronwyn.webp" alt="Bronwyn" loading="lazy">
+                    <img src="assets/images/characters/Bronwyn/Bronwyn.webp" alt="Bronwyn">
                     <ul class="character-traits">
                         <li><span class="trait">High Order Witch</span></li>
                         <li><span class="trait">Master of Mental & Psychic Magick</span></li>
@@ -2082,7 +2082,7 @@
 
         <!-- Seraphyna & Sepherious Character Card (Book 2) -->
             <div class="character-card book2" onclick="openCharacterOverlay('seraphyna-sepherious2-overlay')">
-                <img src="assets/images/characters/Seraphyna/Seraphyna.webp" alt="Seraphyna & Sepherious" loading="lazy">
+                <img src="assets/images/characters/Seraphyna/Seraphyna.webp" alt="Seraphyna & Sepherious">
                 <h3>Seraphyna & Sepherious</h3>
                 <p class="short-description">
                     Reincarnated souls bound by fate, forever drawn together yet always torn apart.
@@ -2102,7 +2102,7 @@
 
                     <!-- Overlay Introduction: Image and Traits -->
                     <div class="overlay-intro">
-                        <img src="assets/images/characters/Seraphyna/Seraphyna.webp" alt="Seraphyna & Sepherious" loading="lazy">
+                        <img src="assets/images/characters/Seraphyna/Seraphyna.webp" alt="Seraphyna & Sepherious">
                         <ul class="character-traits">
                             <li><span class="trait">Reincarnated Souls</span></li>
                             <li><span class="trait">Ethereal Guardians</span></li>
@@ -2176,7 +2176,7 @@
 
             <!-- Mischa's Main Character Card (Book 2) -->
         <div class="character-card book2" onclick="openCharacterOverlay('mischa-overlay')">
-            <img src="assets/images/characters/Mischa/Mischa.webp" alt="Mischa" loading="lazy">
+            <img src="assets/images/characters/Mischa/Mischa.webp" alt="Mischa">
             <h3>Mischa</h3>
             <p class="short-description">
                 The enigmatic and unpredictable outcast, wielding magic beyond comprehension.
@@ -2191,7 +2191,7 @@
                         <h2>Mischa</h2>
                     </div>
                     <div class="overlay-intro">
-                    <img src="assets/images/characters/Mischa/Mischa.webp" alt="Mischa" loading="lazy">
+                    <img src="assets/images/characters/Mischa/Mischa.webp" alt="Mischa">
                         <ul class="character-traits">
                             <li><span class="trait">Mysterious</span></li>
                             <li><span class="trait">Unpredictable</span></li>
