--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p>&copy; 2025 Keira Jarvis. All rights reserved.</p>
     </footer>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/chatbot.js"></script>
 
     
