--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
     </div>
     <button id="open-chatbot">Chat with Me</button>
 
-  <script src="/assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
   <script src="assets/js/chatbot.js"></script>
 </body>
 </html>
