--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
     <button id="open-chatbot">Chat with Me</button>
 
 
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/chatbot.js"></script>
 
     
