updates to stylings and chatbot

--- a/about.html
+++ b/about.html
@@ -93,17 +93,16 @@
             <button onclick="getResponse('Upcoming Projects')">Upcoming Projects</button>
             <button onclick="getResponse('Writing Process')">Writing Process</button>
             <button onclick="getResponse('World-Building')">World-Building</button>
-            <button onclick="getResponse('Favourite Authors')">Favourite Authors</button>
             <button onclick="getResponse('Fun Fact')">Fun Fact</button>
         </div>
         <div id="input-container">
-            <input type="text" id="user-input" placeholder="What would you like to know?" />
-            <button id="submit-button" onclick="sendQuestion()">Send</button>
-        </div>
+          <input type="text" id="user-input" placeholder="Ask a question or for 'help'" />
+          <button id="submit-button" onclick="sendQuestion()">Send</button>
+      </div>
     </div>
     <button id="open-chatbot">Chat with Me</button>
 
-  <script src="assets/js/script.js"></script>
-  <script src="assets/js/chatbot.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/chatbot.js"></script>
 </body>
 </html>
