--- a/contact.html
+++ b/contact.html
@@ -71,11 +71,10 @@
             <button onclick="getResponse('Upcoming Projects')">Upcoming Projects</button>
             <button onclick="getResponse('Writing Process')">Writing Process</button>
             <button onclick="getResponse('World-Building')">World-Building</button>
-            <button onclick="getResponse('Favourite Authors')">Favourite Authors</button>
             <button onclick="getResponse('Fun Fact')">Fun Fact</button>
         </div>
         <div id="input-container">
-            <input type="text" id="user-input" placeholder="What would you like to know?" />
+            <input type="text" id="user-input" placeholder="Ask a question or for 'help'" />
             <button id="submit-button" onclick="sendQuestion()">Send</button>
         </div>
     </div>
