--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/chatbot.css">
+    <link rel="stylesheet" href="assets/components/character-chatbot/Sophie/sophie.css">
 </head>
 <body class="index-page">
     <header>
@@ -32,6 +33,48 @@
             </div>
         </section>
     </main>
+
+<!-- ================================================ -->
+<!-- =================== SOPHIEBOT ================= -->
+<!-- ================================================ -->
+
+    <!-- Open Chat Button -->
+    <button id="open-chat-btn">Open Chat</button>
+
+    <!-- Chat Container (Hidden by default) -->
+<div id="chat-container" style="display: none;">
+    <div id="chat-header">
+        <img src="/assets/images/characters/Sophie/Sophie.webp" alt="Sophie Munday" class="avatar">
+        <h2>Sophie Munday</h2>
+        <!-- Minimize Button -->
+        <button id="minimize-chat-btn" class="minimize-btn">-</button>
+    </div>
+
+    <div id="chat-window">
+        <div id="chat-messages"></div>
+    </div>
+
+    <div id="input-container">
+        <input type="text" id="user-input" placeholder="Type a message..." autocomplete="off">
+        <button id="send-btn">Send</button>
+    </div>
+</div>
+
+
+    <script>
+        // Show chat when the "Open Chat" button is clicked
+        document.getElementById("open-chat-btn").addEventListener("click", function() {
+            document.getElementById("chat-container").style.display = 'block'; // Show chat
+            this.style.display = 'none'; // Hide Open Chat button
+        });
+
+        // Minimize chat when the "Minimize" button inside the chat is clicked
+        document.getElementById("minimize-chat-btn").addEventListener("click", function() {
+            document.getElementById("chat-container").style.display = 'none'; // Hide chat
+            document.getElementById("open-chat-btn").style.display = 'block'; // Show Open Chat button again
+        });
+    </script>
+
 
 
 <!-- ================================================ -->
@@ -75,6 +118,7 @@
 
     <script src="assets/js/script.js"></script>
     <script src="assets/js/chatbot.js"></script>
+    <script src="./assets/components/character-chatbot/Sophie/sophie.js" defer></script>
 
     
 </body>
