--- a/about.html
+++ b/about.html
@@ -26,8 +26,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-container">
-            <img src="https://media.licdn.com/dms/image/v2/D5603AQFtgPoQDe688Q/profile-displayphoto-shrink_200_200/B56ZOPE3QMGcAY-/0/1733272237984?e=2147483647&v=beta&t=CmxhpSfluiK81YHZEmJ6Gcjw5kybJTIfW7tZRz4nk9U" 
-                 alt="Keira Jarvis" class="profile-pic">
+            <img src="assets/images/creator/Keira.jpg" alt="Keira Jarvis" class="profile-pic">
             <div class="about-text">
                 <h3>My Love for Reading</h3>
                 <p>
