--- a/characters.html
+++ b/characters.html
@@ -65,6 +65,32 @@
                         A haunted girl burdened by relentless night terrors and a past she cannot remember.
                     </p>
                 </div>
+
+                <!-- ================================================ -->
+                        <!-- =================== SOPHIEBOT ================= -->
+                        <!-- ================================================ -->
+
+                            <!-- Open Chat Button -->
+                            <button id="open-chat-btn">Fine, talk to me</button>
+
+                            <!-- Chat Container (Hidden by default) -->
+                        <div id="chat-container" style="display: none;">
+                            <div id="chat-header">
+                                <img src="assets/images/characters/Sophie/Sophie.webp" alt="Sophie Munday" class="avatar">
+                                <h2>Sophie Munday</h2>
+                                <!-- Minimize Button -->
+                                <button id="minimize-chat-btn" class="minimize-btn">-</button>
+                            </div>
+
+                            <div id="chat-window">
+                                <div id="chat-messages"></div>
+                            </div>
+
+                            <div id="input-container">
+                                <input type="text" id="user-input" placeholder="Type a message..." autocomplete="off">
+                                <button id="send-btn">Send</button>
+                            </div>
+                        </div>
     
                 <!-- Sophie’s Full Bio Overlay (Initially Hidden) -->
                 <div class="character-overlay" id="sophie-overlay">
