updated mobile functionality

--- a/characters.html
+++ b/characters.html
@@ -80,7 +80,7 @@
                             <button id="open-chat-btn">Fine, talk to me</button>
 
                             <!-- Chat Container (Hidden by default) -->
-                        <div id="chat-container" style="display: none;">
+                        <div id="chat-container">
                             <div id="chat-header">
                                 <img src="assets/images/characters/Sophie/Sophie.webp" alt="Sophie Munday" class="avatar">
                                 <h2>Sophie Munday</h2>
