--- a/books.html
+++ b/books.html
@@ -91,6 +91,27 @@
     <a href="https://www.lulu.com/shop/keira-jarvis/memoirs-of-a-vampyrs-daughter-wisdom/paperback/product-wmkzv2.html" class="buy-button" target="_blank" aria-label="Buy Memoirs of a Vampyr's Daughter: Wisdom">BUY NOW</a>
 </section>
 
+    <!-- Book 3 Description -->
+<section class="book-container">
+    <h3 class="book-subtitle">Book 3 (Coming Soon)</h3>
+    <h2 class="book-title">Memoirs of a Vampyr's Daughter: Prophecy</h2>
+    <p class="book-description">
+        In the final instalment of the Memoirs trilogy, the stakes have never been higher. Eden races to uncover 
+        the prophecy that could change everything, while Jean's desperate search for her daughter drives her to dangerous extremes.
+    </p>
+    <p class="book-description">
+        Aeryn and Mischa turn to the mysterious Witches for aid, but the cost of their help may be greater than expected. 
+        Meanwhile, Sophie and Blaine are locked in a struggle for survival, with the night closing in fast.
+    </p>
+    <p class="book-description">
+        As each character fights their own battles, their paths converge in a gripping climax where fate will be decided once and for all.
+    </p>
+    <p class="book-description"><strong>
+        Stay tuned for release updates!
+    </strong></p>
+    <a class="buy-button disabled">COMING SOON</a>
+</section>
+
 
     <footer>
         <p>&copy; 2025 Keira Jarvis. All rights reserved.</p>
