--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="Keira Jarvis | Author">
+    <meta property="og:description" content="Explore my books, meet the characters, and dive into immersive storytelling.">
+    <meta property="og:image" content="https://keirajarvisauthor.com/assets/images/Banner.webp">
+    <meta property="og:url" content="https://keirajarvisauthor.com/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Keira Jarvis | Author">
+    <meta name="twitter:description" content="Explore my books, meet the characters, and dive into immersive storytelling.">
+    <meta name="twitter:image" content="https://keirajarvisauthor.com/assets/images/Banner.webp">
+
     <title>Keira Jarvis | Author</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/index.css">
